# RES_TP3

./: CMakeLists.txt  README.md  main.cpp
Ressources/headers/: ClassRegistry.h  Deserializer.h  Framework.h  LinkingContext.h  ReplicationManager.h  enemy.h  networkObject.h  player.h
Ressources/src/: ClassRegistry.cpp  Deserializer.cpp  LinkingContext.cpp  ReplicationManager.cpp  Serializer.cpp  networkObject.cpp  player.cpp
examples/basic/: UQACNetwork_EXAMPLE_BASIC.vcxproj  UQACNetwork_EXAMPLE_BASIC.vcxproj.filters  main.cpp
main/: CMakeLists.txt
main/headers/: ClassRegistry.h  Deserializer.h  Framework.h  LinkingContext.h  ReplicationManager.h  Serializer.h  enemy.h  networkObject.h  player.h
main/headers/network/: Connection.hpp  NetworkFramework.hpp  Terminal.hpp  uqacNetwork.hpp
main/src/: ClassRegistry.cpp  Deserializer.cpp  LinkingContext.cpp  ReplicationManager.cpp  Serializer.cpp  enemy.cpp  networkObject.cpp  player.cpp
main/src/network/: Connection.cpp  Terminal.cpp  uqacNetwork.cpp
